@@ -1,3 +1,8 @@
+2005-03-10  Marc Singer  <elf@buici.com>
+
+	* src/drivers/drv-nor-cfi.c: Improved TALK for troubleshooting
+	flash.
+
 2005-03-09  Marc Singer  <elf@buici.com>
 
 	* src/drivers/drv-nor-cfi.c: Moved the cfi driver into the generic
